	PR target/32277 	* libgcov.c ( __gcov_indirect_call_profiler): Check 	TARGET_VTABLE_USES_DESCRIPTORS.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141442 138bc75d-0d04-0410-961f-82ee72b054a4